--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,6 +4,13 @@ body {
   font-family: sans-serif;
 }
 
+.form-control label,
+.form-control input,
+.form-control textarea {
+  width: 100%;
+  display: block;
+}
+
 .form-actions button,
 .btn {
   background: #01d1d1;
